tests/error/struct_errors/protocol_base.err
Error: Unsupported (at $FILE:6:14)
  | 
4 | 
5 | @guppy.struct
6 | class MyProto(Protocol):
  |               ^^^^^^^^ Struct inheritance is not supported

Guppy compilation failed due to 1 previous error
